--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
 <!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AR Camera App</title>
+    <link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+    <h1>AR Camera Demo</h1>
+    <div class="camera-container">
+        <!-- カメラ映像 -->
+        <video id="camera" autoplay playsinline></video>
+        <!-- キャラ画像（仮に一つ固定で表示）-->
+        <img id="character" src="https://placekitten.com/300/300" alt="キャラ">
+    </div>
+
+    <!-- 操作用ボタン -->
+    </div class="controls">
+        </button id="captureBtn">📸 シャッター</button>
+    </div>
+
+    <!-- 撮影結果表示 -->
+     <canvas id="canvas" style="display:none;"></canvas>
+     <div>
+        <h2>保存された画像</h2>
+        <img id="result" alt="結果画像">
+     </div>
+
+     <script src="script.js"></script>
+
+</body>
+</html>
