iOS用にマイナーチェンジ

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>AR Camera Demo</h1>
   <div class="camera-container">
     <!-- カメラ映像 -->
-    <video id="camera" autoplay playsinline></video>
+    <video id="camera" autoplay playsinline muted></video>
     <!-- キャラ画像（仮に1つ固定で表示） -->
     <img id="character" src="https://placekitten.com/300/300" alt="キャラ">
   </div>
