imgsにサンプル画像を追加，相対パスにて指定

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- カメラ映像 -->
     <video id="camera" autoplay playsinline muted></video>
     <!-- キャラ画像（仮に1つ固定で表示） -->
-    <img id="character" src="https://placekitten.com/300/300" alt="キャラ">
+    <img id="character" src="imgs/deoki_sample.jpg" alt="キャラ">
   </div>
 
   <!-- 操作用ボタン -->
