いい加減にしろーーー！！！

--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
 
   <!-- 撮影結果表示 -->
   <canvas id="canvas" style="display:none;"></canvas>
-  <div>
+
+  <img id="result" style="width:100%;margin-top:10px;display:block;">
+
+  <script src="script.js"></script>
+
+</body>
+</html>
+
+  <!--<div>
     <h2>保存された画像</h2>
     <img id="result" alt="結果画像">
   </div>
