--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- カメラ映像 -->
     <video id="camera" autoplay playsinline muted></video>
     <!-- キャラ画像（仮に1つ固定で表示） -->
-    <img id="character" src="imgs/deoki_trans.png" alt="キャラ">
+    <!--<img id="character" src="imgs/deoki_trans.png" alt="キャラ">-->
   </div>
 
   <!-- 操作用ボタン -->
