camera表示をoffにし，canvasをフロントに見えるようにした

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <h1>AR Camera Demo</h1>
   <div class="camera-container">
     <!-- カメラ映像 -->
-    <video id="camera" autoplay playsinline muted></video>
+    <video id="camera" autoplay playsinline muted style="display:none;"></video>
+    <canvas id="canvas"></canvas>
     <!-- キャラ画像（仮に1つ固定で表示） -->
     <!--<img id="character" src="imgs/deoki_trans.png" alt="キャラ">-->
   </div>
